welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:8: error: avance_1 is already defined as value avance_1
val avance_1&droite: String="R";
    ^BDRBuggle:9: error: avance_1 is already defined as value avance_1
val avance_1&gauche: String="L";
    ^BDRBuggle:8: error: not found: value &
val avance_1&droite: String="R";
            ^BDRBuggle:9: error: not found: value &
val avance_1&gauche: String="L";
            ^BDRBuggle:9: error: recursive value x$2 needs type
val avance_1&gauche: String="L";
             ^BDRBuggle:8: error: recursive value x$1 needs type
val avance_1&droite: String="R";
             ^