welcome.lessons.welcome.bdr.BDR.scala.code
val avance_1 :String="A";
val avance_2 :String="B";
val avance_3 :String="C";
val recule_1: String="Z";
val recule_2: String="Y";
val recule_3: String="X";
val avance_1&droite: String="R";
val avance_1&gauche: String="L";
val demitour: String="I";


litMessage(): String;